Comparing if objects are equivalent

--- a/100004-必会函数.ipynb
+++ b/100004-必会函数.ipynb
@@ -104,11 +104,11 @@
     {
      "data": {
       "text/plain": [
-       "a   -1.064462\n",
-       "b    0.303048\n",
-       "c    0.674209\n",
-       "d    0.860001\n",
-       "e    0.355765\n",
+       "a    0.713969\n",
+       "b   -0.980509\n",
+       "c    0.199988\n",
+       "d   -0.077551\n",
+       "e   -1.543433\n",
        "dtype: float64"
       ]
      },
@@ -164,51 +164,51 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>-0.548604</td>\n",
-       "      <td>0.200052</td>\n",
-       "      <td>1.697537</td>\n",
+       "      <td>-0.071828</td>\n",
+       "      <td>-0.232546</td>\n",
+       "      <td>1.761862</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>0.029709</td>\n",
-       "      <td>0.097369</td>\n",
-       "      <td>-0.898586</td>\n",
+       "      <td>1.361749</td>\n",
+       "      <td>0.339205</td>\n",
+       "      <td>0.149887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>-1.139799</td>\n",
-       "      <td>-0.518729</td>\n",
-       "      <td>1.015617</td>\n",
+       "      <td>-0.140589</td>\n",
+       "      <td>-2.015531</td>\n",
+       "      <td>0.506200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>0.043525</td>\n",
-       "      <td>1.162587</td>\n",
-       "      <td>-1.194197</td>\n",
+       "      <td>1.836805</td>\n",
+       "      <td>0.393420</td>\n",
+       "      <td>2.322476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>-0.506127</td>\n",
-       "      <td>0.293115</td>\n",
-       "      <td>1.216037</td>\n",
+       "      <td>-0.888213</td>\n",
+       "      <td>-1.001522</td>\n",
+       "      <td>-0.903180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-06</th>\n",
-       "      <td>-0.297148</td>\n",
-       "      <td>0.442957</td>\n",
-       "      <td>1.239084</td>\n",
+       "      <td>-0.048952</td>\n",
+       "      <td>-1.585721</td>\n",
+       "      <td>0.214827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-07</th>\n",
-       "      <td>-0.047924</td>\n",
-       "      <td>-0.253873</td>\n",
-       "      <td>-1.176359</td>\n",
+       "      <td>-1.460150</td>\n",
+       "      <td>-1.626216</td>\n",
+       "      <td>-1.799029</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-08</th>\n",
-       "      <td>-0.764993</td>\n",
-       "      <td>0.053302</td>\n",
-       "      <td>1.339386</td>\n",
+       "      <td>0.315174</td>\n",
+       "      <td>-0.345656</td>\n",
+       "      <td>-1.960034</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -216,14 +216,14 @@
       ],
       "text/plain": [
        "                   A         B         C\n",
-       "2000-01-01 -0.548604  0.200052  1.697537\n",
-       "2000-01-02  0.029709  0.097369 -0.898586\n",
-       "2000-01-03 -1.139799 -0.518729  1.015617\n",
-       "2000-01-04  0.043525  1.162587 -1.194197\n",
-       "2000-01-05 -0.506127  0.293115  1.216037\n",
-       "2000-01-06 -0.297148  0.442957  1.239084\n",
-       "2000-01-07 -0.047924 -0.253873 -1.176359\n",
-       "2000-01-08 -0.764993  0.053302  1.339386"
+       "2000-01-01 -0.071828 -0.232546  1.761862\n",
+       "2000-01-02  1.361749  0.339205  0.149887\n",
+       "2000-01-03 -0.140589 -2.015531  0.506200\n",
+       "2000-01-04  1.836805  0.393420  2.322476\n",
+       "2000-01-05 -0.888213 -1.001522 -0.903180\n",
+       "2000-01-06 -0.048952 -1.585721  0.214827\n",
+       "2000-01-07 -1.460150 -1.626216 -1.799029\n",
+       "2000-01-08  0.315174 -0.345656 -1.960034"
       ]
      },
      "execution_count": 10,
@@ -252,11 +252,11 @@
     {
      "data": {
       "text/plain": [
-       "0    1.545888\n",
-       "1    0.494468\n",
-       "2   -0.160815\n",
-       "3   -0.012195\n",
-       "4   -0.144311\n",
+       "0   -0.586203\n",
+       "1   -0.623562\n",
+       "2   -0.693426\n",
+       "3   -0.388925\n",
+       "4   -0.271721\n",
        "dtype: float64"
       ]
      },
@@ -277,9 +277,9 @@
     {
      "data": {
       "text/plain": [
-       "997    0.917896\n",
-       "998    0.729370\n",
-       "999    2.641425\n",
+       "997    1.228761\n",
+       "998   -0.059852\n",
+       "999   -0.670342\n",
        "dtype: float64"
       ]
      },
@@ -333,15 +333,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>-0.548604</td>\n",
-       "      <td>0.200052</td>\n",
-       "      <td>1.697537</td>\n",
+       "      <td>-0.071828</td>\n",
+       "      <td>-0.232546</td>\n",
+       "      <td>1.761862</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>0.029709</td>\n",
-       "      <td>0.097369</td>\n",
-       "      <td>-0.898586</td>\n",
+       "      <td>1.361749</td>\n",
+       "      <td>0.339205</td>\n",
+       "      <td>0.149887</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -349,8 +349,8 @@
       ],
       "text/plain": [
        "                   A         B         C\n",
-       "2000-01-01 -0.548604  0.200052  1.697537\n",
-       "2000-01-02  0.029709  0.097369 -0.898586"
+       "2000-01-01 -0.071828 -0.232546  1.761862\n",
+       "2000-01-02  1.361749  0.339205  0.149887"
       ]
      },
      "execution_count": 14,
@@ -2573,6 +2573,239 @@
    ],
    "source": [
     "pd.DataFrame([False]).bool()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing if objects are equivalent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-02</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-03</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-06</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-07</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-08</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               a     b     c\n",
+       "2000-01-01  True  True  True\n",
+       "2000-01-02  True  True  True\n",
+       "2000-01-03  True  True  True\n",
+       "2000-01-04  True  True  True\n",
+       "2000-01-05  True  True  True\n",
+       "2000-01-06  True  True  True\n",
+       "2000-01-07  True  True  True\n",
+       "2000-01-08  True  True  True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df + df == df * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    True\n",
+       "b    True\n",
+       "c    True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df + df == df * 2).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nan == np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df + df).equals(df * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.DataFrame({\"col\":[\"foo\", 0 , np.nan]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.DataFrame({\"col\":[np.nan, 0, \"foo\"]}, index=[2, 1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.equals(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.equals(df2.sort_index())"
    ]
   },
   {
