常用函数及说明

--- a/100004-必会函数.ipynb
+++ b/100004-必会函数.ipynb
@@ -4131,6 +4131,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|  函数名   | 作用说明  |\n",
+    "|  ----  | ----  |\n",
+    "| count | Number of non-NA observations |\n",
+    "| sum | Sum of values |\n",
+    "| mean | Mean of values |\n",
+    "| mad | Mean absolute deviation |\n",
+    "| median | Arithmetic median of values |\n",
+    "| min | Minimum |\n",
+    "| max | Maximum |\n",
+    "| mode | Mode |\n",
+    "| abs | Absolute Value |\n",
+    "| prod | Product of values |\n",
+    "| std | Bessel-corrected sample standard deviation |\n",
+    "| var | Unbiased variance |\n",
+    "| sem | Standard error of the mean |\n",
+    "| skew | Sample skewness (3rd moment) |\n",
+    "| kurt | Sample kurtosis (4th moment) |\n",
+    "| quantile | Sample quantile (value at %) |\n",
+    "| cumsum | Cumulative sum |\n",
+    "| cumprod | Cumulative product |\n",
+    "| cummax | Cumulative maximum |\n",
+    "| cummin | Cumulative minimum |"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
